# Decentralized_Voting_System

./: CMakeLists.txt
Code/cpp/: main.cpp
Code/solidity/: Voting.sol
